--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/teach_manage?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=Asia/Shanghai&characterSetResults=utf8
     username: root
-    password: 12138ttt
+    password: 54088Cnm,
     driver-class-name: com.mysql.cj.jdbc.Driver
   mvc:
     pathmatch:
